--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.8.1
-coverage==7.6.4
-cssselect==1.2.0
-Django==5.1.2
-django-widget-tweaks==1.5.0
-django-with-asserts==0.0.1
-Faker==30.8.2
-libgravatar==1.0.4
-lxml==5.3.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-six==1.16.0
-sqlparse==0.5.1
-typing_extensions==4.12.2
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.12.3
+bs4==0.0.2
+certifi==2024.8.30
+charset-normalizer==3.4.0
+Django==4.2.16
+idna==3.10
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pip-search==0.0.12
+pygments==2.18.0
+requests==2.32.3
+rich==13.9.4
+soupsieve==2.6
+sqlparse==0.5.2
+typing-extensions==4.12.2
+urllib3==2.2.3
